--- a/html/caiouser.html
+++ b/html/caiouser.html
@@ -66,6 +66,16 @@ ataby_himawari</a>
         <a href="rob-nam2.html"><img style="height:100px" src="../img/thumb_-_Copia.png" alt="Alternate Text" /></a>
         <a href="aluradefendercaio.html"><img style="height:100px" src="../img/thumb_-_Copia (1).png" alt="Alternate Text" /></a>
     </div>
+    <h3>Musicas:</h3>
+    <BR />
+    <div id="projetos">
+        
+    </div>
+    <h3>Artes</h3>
+    <BR />
+    <div id="projetos">
+        
+    </div>
 
 
 </body>
