--- a/html/fabriciouser.html
+++ b/html/fabriciouser.html
@@ -70,11 +70,21 @@
     <br /><br /><br />
     <h3>Jogos:</h3>
     <BR />
-    <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
+    <div id="projetos">
         <a href="mk3ultimatebeta.html"><img style="height:100px" src="../img/Project_Capture.jpg" alt="MK3 ULTIMATE BETA" /></a>
     </div>
+    <h3>Musicas:</h3>
+    <BR />
+    <div id="projetos">
+        
+    </div>
+    <h3>Artes</h3>
+    <BR />
+    <div id="projetos">
+        
+    </div>
 
-    <div id="chat_fabriciouser" style='colors: ' ></div>
+    <div id="chat_fabriciouser"></div>
     <script type="text/javascript">
         var chatovodOnLoad = chatovodOnLoad || [];
         chatovodOnLoad.push(function() {
