--- a/html/mily.html
+++ b/html/mily.html
@@ -53,18 +53,21 @@
     <br /><br /><br />
     <h3>Jogos:</h3>
     <BR />
-    <div 
-        style=
-        "text-align:left; 
-        color: black; 
-        font-weight: bold; 
-        background-position: center; 
-        padding: 5px; margin: 50px 100px; 
-        border: inset; ">
+    <div id="projetos">
         <p style="text-align:center;">Nehum jogo cadastrado até o momento</p>
     </div>
+    <h3>Musicas:</h3>
+    <BR />
+    <div id="projetos">
+        
+    </div>
+    <h3>Artes</h3>
+    <BR />
+    <div id="projetos">
+        
+    </div>
 
-    <div id="chat_camilyuser" style='colors: ' ></div>
+    <div id="chat_camilyuser"></div>
     <script type="text/javascript">
         var chatovodOnLoad = chatovodOnLoad || [];
         chatovodOnLoad.push(function() {
