--- a/html/ederuser.html
+++ b/html/ederuser.html
@@ -53,19 +53,22 @@
     <br /><br /><br />
     <h3>Jogos:</h3>
     <BR />
-    <div 
-        style=
-        "text-align:left; 
-        color: black; 
-        font-weight: bold; 
-        background-position: center; 
-        padding: 5px; margin: 50px 100px; 
-        border: inset; ">
-        <p ><a href="soccerteam.html"><img style="height:100px" src="../img/img_Soccer_Game.png" alt="Soccer Team" /></a></p>
+    <div id="projetos">
+        <a href="soccerteam.html"><img style="height:100px" src="../img/img_Soccer_Game.png" alt="Soccer Team" /></a>
+    </div>
+    <h3>Musicas:</h3>
+    <BR />
+    <div id="projetos">
+        
+    </div>
+    <h3>Artes</h3>
+    <BR />
+    <div id="projetos">
+        
     </div>
 
 
-    <div id="chat_ederuser" style='colors: ' ></div>
+    <div id="chat_ederuser"  ></div>
     <script type="text/javascript">
         var chatovodOnLoad = chatovodOnLoad || [];
         chatovodOnLoad.push(function() {
