--- a/html/wesleyuser.html
+++ b/html/wesleyuser.html
@@ -72,8 +72,18 @@ Olá pessoal!  Sou Wesley Queiroz Alencar, aluno do programa Edutech (Obrigado p
 
     <h3>Jogos:</h3>
     <BR />
-    <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
+    <div id="projetos">
         <a href="defendasuanaveespacial.html"><img style="height:100px" src="../img/defendasuanaveespacial_projetos.png" alt="Defenda Sua Nave Espacial" /></a>
+    </div>
+    <h3>Musicas:</h3>
+    <BR />
+    <div id="projetos">
+        
+    </div>
+    <h3>Artes</h3>
+    <BR />
+    <div id="projetos">
+        
     </div>
 
 <div id="chat_wesleyuser" style='colors: ' ></div>
