--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 				<h2>Membros do Fall Gwecs Team</h2>
 				<a 
 				
-				href="html/wesleyuser.html" >
+				href="html/wesley.html" >
 	
 				<img style="height: 150px;;"  src="img/wesleycircular.png" alt="Alternate Text" /></a>
 				
