--- a/html/wesley.html
+++ b/html/wesley.html
@@ -48,8 +48,8 @@ crossorigin="anonymous"></script>
     </div>
     
     <h2>Meus Projetos</h2>
-    <p id="div2">Atualmente meu notboock tem apenas 2 GB de ram então ando meio parado, porem e feito um jogo no scrath chamado <a href="">Defenda Sua Nave Espacial</a> e tambem fiz e atualizei a Fall Gwecs Team Web. Pretendo seguir fazendo mais jogos entre outras coisas, al final criar jogos é divertido né? E mais ainda se você joga eles </p>
-    <div id="div3">
+    <p id="div2">Atualmente meu notebook tem apenas 2 GB de ram então ando meio parado, porem e feito um jogo no scrath chamado <a href="">Defenda Sua Nave Espacial</a> e tambem fiz e atualizei a Fall Gwecs Team Web. Pretendo seguir fazendo mais jogos entre outras coisas, al final criar jogos é divertido né? E mais ainda se você joga eles </p>
+    <div id="div3" style="text-align: center;">
 		<h3 align="center">Jogos</h3>
 		<br>
 		<div id="div1">
@@ -64,13 +64,16 @@ crossorigin="anonymous"></script>
 			<p>Erro 404</p>
 		</div>
 	</div>
-		<h3 align="center">Fale com eu</h3>
-		<div ></div>
+	<div style="text-align: center;">
+		<h3 align="center">CHAT</h3>
+		<div id="chat_wesleyuser"></div>
+	</div>
+
 <script type="text/javascript">
     var chatovodOnLoad = chatovodOnLoad || [];
     chatovodOnLoad.push(function() {
         chatovod.addChatToDivId("chat_wesleyuser", {host: "wesleyuser.chatovod.com",
-            width: "85%", height: 380, defaultLanguage: "en"});
+            width: "auto", height: 380, defaultLanguage: "en"});
     });
     (function() {
         var po = document.createElement('script');
