--- a/html/goc.html
+++ b/html/goc.html
@@ -53,19 +53,19 @@
 
    
     <h4>Recursos naturais </h4>
-    <img src="../img/goc/graveto.png" alt="Alternate Text" style="background-color:blue;" />
-    <img src="../img/goc/pedra_certa.png" alt="Alternate Text" style="background-color:blue;"/>
+    <img src="../img/goc/graveto.png"  />
+    <img src="../img/goc/pedra_certa.png" />
     <br>
     <h4>Objetos que fazem parte da tela do jogador</h4>
-    <img src="../img/goc/mochila_prototico.png" alt="Alternate Text" style="background-color:blueviolet;" />
-    <img src="../img/goc/moeda_projeto.png" alt="Alternate Text" style="background-color:blueviolet;"/>
+    <img src="../img/goc/mochila_prototico.png" />
+    <img src="../img/goc/moeda_projeto.png" />
     <br>
-    <h4>Armamentos</h4>
-    <img src="../img/goc/espada_1.png" alt="" style="background-color:red;">
-    <img src="../img/goc/katana.png" alt="" style="background-color:red;">
+    <h4>Armas</h4>
+    <img src="../img/goc/espada_1.png">
+    <img src="../img/goc/katana.png">
     <br>
-    <img src="../img/goc/espada_3curta.png" alt="" style="background-color:red;">
-    <img src="../img/goc/espada_4_2.png" alt="" style="background-color:red;">
+    <img src="../img/goc/espada_3curta.png">
+    <img src="../img/goc/espada_4_2.png">
 
 
 <h3>Audios feito pelo <a href="fabriciouser.html">Fabricio</a><br><a href= "../mp3/audios.rar" download="../mp3/musica_doidona.mp3" class="blue">Dowload</a></h3>
