--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
@@ -24,12 +24,12 @@
 		<script language="javascript">
 			
 			function aumenta(obj){
-				obj.height=obj.height*1.2;
+				obj.height=obj.height*1.1;
 				
 			}
 			 
 			function diminui(obj){
-				obj.height=obj.height/1.2;
+				obj.height=obj.height/1.1;
 
 			}
 
