--- a/html/eder.html
+++ b/html/eder.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<title>Fabrício Keltika Tanquella</title>
+	<title>Eder José Schon</title>
 	
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -12,12 +12,12 @@
 	<link rel="stylesheet" href="../css/templatemo_style.css">
 	<link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/style.css">
+	<link rel="shortcut icon" href="../img/Fall_Gwecs_simbolo_COMPLETO_PRETO.ico" />
 	
-	<meta name="author" content="Fabrício Keltika Tanquella">
-	<meta name="description" content="Oi eu me chamo Fabrício Keltika Tanquella, sou Artista, programador, compositor e organizador do Guardians of Crystal. Gosto de jogos com ação e bastante violencia; Sei programar em Unity, Unreal, Java e Pyton;
-    Meu estilo de música é Funk, Trap e Eletrônica; Na parte de Arte me dou melhor com desenhos de cenários e objetos, consigo desenhar tanto em art realista quanto em pixel art, porém em art realista me dou um pouco melhor.">
+	<meta name="author" content="Wesley Queiroz Alencar">
+	<meta name="description" content="Olá, meu nome é Eder José Schon e tenho 13 anos, sou artista, programador, escritor, matemático, entre mil outras coisas. Sou muito bom em arte realista, mas consigo fazer coisas legais com pixel art. Gosto muito de ler e de criar histórias de fantasia (principalmente medieval), e por isso criei boa parte da história de GOC e estou criando um livro nesse estilo. No momento, estou trabalhando no projeto do GOC, e em conjunto com os outros artistas da equipe, estou criando os recursos gráficos do game e ajudando, raramente, na programação.">
 	<meta name="keywords" content="">
-	<meta name="title" content="Fabrício Keltika Tanquella">
+	<meta name="title" content="Wesley Queiroz Alencar">
 
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -32,7 +32,7 @@ crossorigin="anonymous"></script>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="site-branding">
-						<a href="../index.html"><h1>Voltar</h1></a></a>
+						<a href="../index.html"><h1>Voltar</h1></a>
 					</div>
 				</div>
 				<a href="#" class="toggle-nav hidden-md hidden-lg">
@@ -44,18 +44,16 @@ crossorigin="anonymous"></script>
 	</header>
 	
     <h2 class="welcome-title animated fadeInLeft">Sobre mim </h2>
-    <div id="div">
-        <p>Oi eu me chamo Fabrício Keltika Tanquella, sou Artista, programador, compositor e organizador do <a href="goc.html">Guardians of Crystal</a>. Gosto de jogos com ação e bastante violencia; Sei programar em Unity, Unreal, Java e Pyton;
-            Meu estilo de música é Funk, Trap e Eletrônica; Na parte de Arte me dou melhor com desenhos de cenários e objetos, consigo desenhar tanto em art realista quanto em pixel art, porém em art realista me dou um pouco melhor.</p>
+    <div id="div2">
+        <p>Olá, meu nome é Eder José Schon e tenho 13 anos, sou artista, programador, escritor, matemático, entre mil outras coisas. Sou muito bom em arte realista, mas consigo fazer coisas legais com pixel art. Gosto muito de ler e de criar histórias de fantasia (principalmente medieval), e por isso criei boa parte da história de <a href="goc.html">GOC</a> e estou criando um livro nesse estilo. No momento, estou trabalhando no projeto do <a href="goc.html">GOC</a>, e em conjunto com os outros artistas da equipe, estou criando os recursos gráficos do game e ajudando, raramente, na programação.</p>
     </div>
     
     <h2>Meus Projetos</h2>
-
     <div id="div3" style="text-align: center;">
 		<h3 align="center">Jogos</h3>
 		<br>
 		<div id="div1">
-			<a href="mk3ultimatebeta.html"><img style="height:100px" src="../img/Project_Capture.jpg" alt="MK3 ULTIMATE BETA" /></a>
+            <a href="soccerteam.html"><img style="height:100px" src="../img/img_Soccer_Game.png" alt="Soccer Team" /></a>
 		</div>
 		<h3 align="center">Imagens</h3>
 		<div id="div1">
@@ -68,13 +66,13 @@ crossorigin="anonymous"></script>
 	</div>
 	<div style="text-align: center;">
 		<h3 align="center">CHAT</h3>
-		<div id="chat_fabriciouser"></div>
+        <div id="chat_ederuser"></div>
 	</div>
 
     <script type="text/javascript">
         var chatovodOnLoad = chatovodOnLoad || [];
         chatovodOnLoad.push(function() {
-            chatovod.addChatToDivId("chat_fabriciouser", {host: "fabriciouser.chatovod.com",
+            chatovod.addChatToDivId("chat_ederuser", {host: "ederuser.chatovod.com",
                 width: "auto", height: 380, defaultLanguage: "en"});
         });
         (function() {
