--- a/html/goc.html
+++ b/html/goc.html
@@ -38,7 +38,7 @@
             <h3 id="div2">Membros deste projeto</h3>
             <p id="div2">
                 O organizador do projeto é <a href="fabriciouser.html">Fabrício Keltika Tanquella</a>, 
-                os responsaveis por os gráficos são <a href="ederuser.html">Eder</a> , <a href="fabriciouser.html">Fabrício Keltika Tanquella</a>, <a href="guilherme.html">Guilherme</a>, <a href="caiouser.html">Caio Rodrigo Forim</a> e <a href="ludis.html">Ludis</a>, por os áudios são <a href="fabriciouser.html">Fabrício Keltika Tanquella</a> e <a href="caiouser.html">Caio Rodrigo Forim</a> Por os Cutcienes/história André e <a href="ederuser.html">Eder</a>. Membros do apoio geral: André, <a href="laura.html">Laura</a>, <a href="mily.html">Mily</a>, Thai e <a href="wesleyuser.html">Wesley</a>. Roteirista: <a href="mily.html">Mily</a><br />
+                os responsaveis por os gráficos são <a href="eder.html">Eder José Schon</a> , <a href="fabricio.html">Fabrício Keltika Tanquella</a>, <a href="guilherme.html">Guilherme</a>, <a href="caiouser.html">Caio Rodrigo Forim</a> e <a href="ludis.html">Ludis</a>, por os áudios são <a href="fabriciouser.html">Fabrício Keltika Tanquella</a> e <a href="caiouser.html">Caio Rodrigo Forim</a> Por os Cutcienes/história André e <a href="eder.html">Eder José Schon</a>. Membros do apoio geral: André, <a href="laura.html">Laura</a>, <a href="mily.html">Mily</a>, Thai e <a href="wesley.html">Wesley</a>. Roteirista: <a href="mily.html">Mily</a><br />
             </p>
             <div id="div2">
                 <h3>Sinopse do jogo</h3>
