--- a/html/wesley.html
+++ b/html/wesley.html
@@ -12,9 +12,10 @@
 	<link rel="stylesheet" href="../css/templatemo_style.css">
 	<link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/style.css">
+	<link rel="shortcut icon" href="../img/Fall_Gwecs_simbolo_COMPLETO_PRETO.ico" />
 	
 	<meta name="author" content="Wesley Queiroz Alencar">
-	<meta name="description" content="...">
+	<meta name="description" content="Olá pessoal! Sou Wesley Queiroz Alencar, aluno do Programa Edutech (Obrigado professora Roseli Oliveira Aleixo Da Silva e aos professores do Alura por estar nos guiando nesta jornada de programador), também sou o fundador da página web Fall Gwecs Team. Tenho 14 anos e estou terminando o ensino fundamental no Colégio Estadual Professor Elysio Vianna que fica em Curitiba (Capital do Paraná). Sou programador porem não tenho uma linguajem de programação especifica para trabalhar, sei usar um pouquinho de Python, Java e Java Script. Gosto bastante de linguagens de desenvolvimento web tanto é que fiz a Fall Gwecs Team Web usando HTML, CSS e JS junto com os demais alunos que me ajudaram bastante com o design dá página (Graças a Eder a página tem vários ícones legais, e a Fabricio e Caio que escolheram o tema dá página).">
 	<meta name="keywords" content="">
 	<meta name="title" content="Wesley Queiroz Alencar">
 
@@ -31,7 +32,7 @@ crossorigin="anonymous"></script>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="site-branding">
-						<a href="#"><h1>Wesley Queiroz Alencar </h1></a>
+						<a href="../index.html"><h1>Voltar</h1></a>
 					</div>
 				</div>
 				<a href="#" class="toggle-nav hidden-md hidden-lg">
