--- a/html/ederuser.html
+++ b/html/ederuser.html
@@ -1,14 +1,14 @@
 ﻿<html lang="pt-br">
     <head>
         <meta charset="utf-8" name="viewport" content="" />
-        <title>Eder</title>
+        <title>Eder José Schon</title>
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/font-awesome.min.css">
         <link rel="stylesheet" href="../css/simple-line-icons.css">
         <link rel="stylesheet" href="../css/animate.css">
         <link rel="stylesheet" href="../css/templatemo_style.css">
         <link rel="stylesheet" href="../css/colors.css">
-        <link rel="shortcut icon" href="../img/simbolo_goc_completo_preto.ico" />
+        
         
     </head>
 <body style="text-align:center">
@@ -54,7 +54,7 @@
     <h3>Jogos:</h3>
     <BR />
     <div id="projetos">
-        <a href="soccerteam.html"><img style="height:100px" src="../img/img_Soccer_Game.png" alt="Soccer Team" /></a>
+
     </div>
     <h3>Musicas:</h3>
     <BR />
