--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/templatemo_style.css">
 	<link rel="stylesheet" href="css/colors.css">
+	<link rel="shortcut icon" href="img/Fall_Gwecs_simbolo_COMPLETO_PRETO.ico" />
 	
 	<meta name="author" content="Fall gwecs team">
 	<meta name="description" content="A pagina oficial da Fall GwecsTeam. Esta pagina foi feita por alunos da turma edutech 12400133, aqui você vai encontrar varios projetos legais da nossa equipe.">
@@ -184,10 +185,7 @@
 		
 		  
 			<script src="https://thatziv.github.io/webhook/jquery.js"></script>
-			<script>/*   
-			  Project by Zua 
-			  https://github.com/thatziv/webhook 
-			*/
+			<script>
 			$(function(){
 				$('#btn').click(function(){
 					var link = 'https://discord.com/api/webhooks/854395220657700885/fbT11eqc1ZamLYIoE3S4AJX42o4fQ1cxMLIyha_taehXTPQpACL949CBcvgJ86P8r2lT';
@@ -276,7 +274,7 @@
 					
 					<img height="150px"  src="img/caiocircular.png"  onMouseOver="aumenta(this)" onMouseOut="diminui(this)"></a>
 	
-				<a href="html/ederuser.html">
+				<a href="html/eder.html">
 					<img height="150px"  src="img/eucircular.png"  onMouseOver="aumenta(this)" onMouseOut="diminui(this)"></a>
 					<br>
 				<a href="html/mily.html">
