--- a/html/eder.html
+++ b/html/eder.html
@@ -17,7 +17,7 @@
 	<meta name="author" content="Eder José Schon">
 	<meta name="description" content="Olá, meu nome é Eder José Schon e tenho 13 anos, sou artista, programador, escritor, matemático, entre mil outras coisas. Sou muito bom em arte realista, mas consigo fazer coisas legais com pixel art. Gosto muito de ler e de criar histórias de fantasia (principalmente medieval), e por isso criei boa parte da história de GOC e estou criando um livro nesse estilo. No momento, estou trabalhando no projeto do GOC, e em conjunto com os outros artistas da equipe, estou criando os recursos gráficos do game e ajudando, raramente, na programação.">
 	<meta name="keywords" content="">
-	<meta name="title" content="Wesley Queiroz Alencar">
+	<meta name="title" content="Eder José Schon">
 
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
