--- a/html/wesley.html
+++ b/html/wesley.html
@@ -55,6 +55,7 @@ crossorigin="anonymous"></script>
 		<br>
 		<div id="div1">
 			<a href="defendasuanaveespacial.html"><img style="height:100px" src="../img/defendasuanaveespacial_projetos.png" alt="Defenda Sua Nave Espacial" /></a>
+			<a href="calculadorabywesley.html"><img style="height:100px" src="../img/calculator-vector-icon-png_308914.png" alt="Calculadora" /></a>
 		</div>
 		<h3 align="center">Imagens</h3>
 		<div id="div1">
