--- a/html/caio2user.html
+++ b/html/caio2user.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<title>Caio2</title>
+	<title>Caio Costa Cezar</title>
 	
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -13,10 +13,10 @@
 	<link rel="stylesheet" href="../css/colors.css">
     <link rel="stylesheet" href="../css/style.css">
 	
-	<meta name="author" content="Caio2">
-	<meta name="description" content="...">
+	<meta name="author" content="Caio Costa Cezar">
+	<meta name="description" content="Ovo">
 	<meta name="keywords" content="">
-	<meta name="title" content="Caio2">
+	<meta name="title" content="Caio Costa Cezar">
 
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -44,7 +44,7 @@ crossorigin="anonymous"></script>
 	
     <h2 class="welcome-title animated fadeInLeft">Sobre mim </h2>
     <div id="div2">
-        <p >Erro 404</p>
+        <p >Olá eu sou Caio (não o Kio), você pode me chamar de "Cat"  eu sou um dos membros mais novos no FGT até então. Um dos motivos principais de ter entrado no time foi para eu melhorar meu conhecimento de programação, abaixo deste texto tem um jogo e uma mini animação que fiz no scratch, e é só isso mesmo..</p>
     </div>
     
     <h2>Meus Projetos</h2>
