--- a/html/eder.html
+++ b/html/eder.html
@@ -57,7 +57,8 @@ crossorigin="anonymous"></script>
 		</div>
 		<h3 align="center">Imagens</h3>
 		<div id="div1">
-			<p >Erro 404</p>
+			<img src="../img/ederarte1.jpg" alt="">
+			<img src="../img/ederarte2.jpg" alt="">
 		</div>
 		<h3 align="center">Musicas</h3>
 		<div id="div1">
